k8n/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: tinyurl

  template:
    metadata:
      name: tinyurl
      labels:
        app: tinyurl

    spec:
      containers:
        - name: tinyurl
          image: tinyurl_app:v1
          ports:
            - containerPort: 8000
