k8n/postgres-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: postgres
  labels:
    app: postgres
    
spec:
  containers:
    - name: postgres
      image: postgres:15-alpine

      ports:
        - containerPort: 5432
