k8n/redis-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: redis
  labels:
    app: redis

spec:
  containers:
    - name: redis
      image: redis:7-alpine
      ports:
        - containerPort : 6379
