k8n/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app-service

spec:
  selector:
    app: tinyurl

  ports:
    - port: 8000
      targetPort: 8000
